--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent_black">#360F0F0F</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="green">#00D49A</color>
 </resources>
