finished registration process. added user object. location left

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -79,6 +80,7 @@
             android:background="@drawable/white_button"
             android:fontFamily="@font/robotomonoregular"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:text="@string/email"
             android:textAlignment="center"
             android:textSize="20sp" />
@@ -125,5 +127,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
