--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,9 +58,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email"
+            android:padding="24dp"
+            android:fontFamily="@font/robotomonoregular"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:id="@+id/email_register"
+            android:inputType="textEmailAddress"/>
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/name_register"
+            android:hint="@string/name"
+            android:padding="24dp"
+            android:fontFamily="@font/robotomonoregular"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"/>
         <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinnerView"
+            android:id="@+id/gender_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground"
@@ -79,23 +98,15 @@
             app:spinner_popup_elevation="14dp"
             android:fontFamily="@font/robotomonoregular"
             app:fontFamily="@font/robotomonoregular"/>
-
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/name"
-            android:padding="24dp"
-            android:fontFamily="@font/robotomonoregular"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"/>
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/DOB"
             android:padding="24dp"
+            android:focusable="false"
             android:fontFamily="@font/robotomonoregular"
             android:id="@+id/age_selector_register"
+            android:textSize="17sp"
             android:textColorHint="@color/white"
             android:textColor="@color/white" />
 
@@ -106,35 +117,11 @@
             android:id="@+id/age_year_selector_register"
             android:inputType="none"
             android:padding="24dp"
+            android:textColor="@color/white"
             android:fontFamily="@font/robotomonoregular"
             android:textColorHint="@color/white" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/location_edittext_register"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_weight="9"
-                android:focusable="false"
-                android:fontFamily="@font/robotomonoregular"
-                android:hint="@string/location"
-                android:padding="24dp"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="24dp"
-                android:src="@drawable/ic_baseline_location_on_24"
-                android:id="@+id/location_button_register"/>
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -193,16 +180,7 @@
             app:spinner_popup_elevation="14dp"
             android:fontFamily="@font/robotomonoregular"
             app:fontFamily="@font/robotomonoregular" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hobby"
-            android:id="@+id/height_register"
-            android:inputType="number"
-            android:padding="24dp"
-            android:textColorHint="@color/white"
-            android:fontFamily="@font/robotomonoregular"
-            android:textColor="@color/white" />
+
 
         <com.skydoves.powerspinner.PowerSpinnerView
             android:id="@+id/smoking_pref_registration"
@@ -241,12 +219,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/location_edittext_register"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="9"
+                android:focusable="true"
+                android:fontFamily="@font/robotomonoregular"
+                android:hint="@string/location"
+                android:padding="24dp"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/ic_baseline_location_on_24"
+                android:id="@+id/location_button_register"/>
+        </LinearLayout>
+
         <com.skydoves.powerspinner.PowerSpinnerView
             android:id="@+id/religion_registration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground"
-            android:hint="@string/eye_color"
+            android:hint="@string/religion"
             android:padding="16dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -279,6 +284,26 @@
             android:layout_height="wrap_content"
             android:hint="@string/bio"
             android:id="@+id/bio_register"
+            android:inputType="none"
+            android:padding="24dp"
+            android:textColorHint="@color/white"
+            android:fontFamily="@font/robotomonoregular"
+            android:textColor="@color/white"/>
+<EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/prologue"
+            android:id="@+id/prologue_register"
+            android:inputType="none"
+            android:padding="24dp"
+            android:textColorHint="@color/white"
+            android:fontFamily="@font/robotomonoregular"
+            android:textColor="@color/white"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/profession"
+            android:id="@+id/profession_register"
             android:inputType="none"
             android:padding="24dp"
             android:textColorHint="@color/white"
@@ -343,6 +368,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="24dp"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar_loading_register_activity"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
